# django-event-management

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: config.py  db.sqlite3  manage.py
src/common/: containers.py  repositories.py
src/event_management/: celery.py  settings.py  urls.py
src/events/: containers.py  filters.py  models.py  notifiers.py  repositories.py  serializer.py  services.py  tasks.py  urls.py  views.py
src/events/migrations/: 0001_add_event_and_event_registration_models.py
src/events/use_cases/: events.py
src/templates/email/: registration_confirmation.html
src/users/: urls.py  views.py
src/users/migrations/: 0001_add_user_model.py
src/users/tests/: test_user_api.py
