[project]
name = "jointoit-django-event-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
